--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,10 +1,68 @@
-.container 
-	padding-bottom: 50px
+#carousel 
+	width: 400px
+	max-width: 100%
+	height: 300px
+	border-radius: 10px
+	overflow: hidden
+	margin: calc(50vh / 2) auto 0 auto
+	transform: translateY(50%)
 
+ul
+	width: 3200px
+	list-style-type: none
+	padding: 0
+	margin: 0
+	
+	li
+		list-style: none
+		float: left
+		font-size: 40px
 
-#js-totalScore
-	div.col-xs-4:nth-child(2)
-		text-align: center
-		font-size: 48px
-#js-winner
-	display: none
+#ctrl
+	height: 40px
+	position: relative
+	top: 150px
+	width: 400px
+	max-width: 100%
+	margin: 0 auto
+	ul 
+		list-style-type: circle
+		position: absolute
+		left: 50%
+		transform: translateX(-22%)
+		width: 400px
+		li
+			margin: 0 10px
+
+.btn 
+	position: absolute
+	height: 30px
+	width: 30px
+	background-color: #fff
+	text-align: center
+	line-height: 30px
+	border-radius: 50%
+	opacity: 0.5
+	top: 50%
+	transform: translate(-50%)
+	&:hover
+		opacity: 0.7
+	
+
+#btn-left 
+	left: 30px
+
+#btn-right
+	right: 5px
+
+.pointer 
+	color: red
+	list-style-type: disc
+
+.circle
+	color: black
+	list-style-type: circle
+	
+
+	
+/* AW */
