--- a/sass/style.sass
+++ b/sass/style.sass
@@ -3,20 +3,22 @@
 	max-width: 100%
 	height: 300px
 	border-radius: 10px
-	overflow: hidden
 	margin: calc(50vh / 2) auto 0 auto
 	transform: translateY(50%)
+	overflow: hidden
+	img
+		cursor: pointer
 
-ul
-	width: 3200px
-	list-style-type: none
-	padding: 0
-	margin: 0
-	
-	li
-		list-style: none
-		float: left
-		font-size: 40px
+	ul
+		width: 3200px
+		list-style-type: none
+		padding: 0
+		margin: 0
+
+		li
+			list-style: none
+			font-size: 40px
+			float: left
 
 #ctrl
 	height: 40px
@@ -26,13 +28,19 @@ ul
 	max-width: 100%
 	margin: 0 auto
 	ul 
-		list-style-type: circle
-		position: absolute
-		left: 50%
-		transform: translateX(-22%)
+		list-style-type: none
 		width: 400px
+		text-align: center
+		padding: 0
+		margin: 0
 		li
-			margin: 0 10px
+			margin: 5px 10px
+			width: 20px
+			height: 20px
+			border-radius: 50%
+			display: inline-block
+			line-height: 20px
+			cursor: pointer
 
 .btn 
 	position: absolute
@@ -45,6 +53,7 @@ ul
 	opacity: 0.5
 	top: 50%
 	transform: translate(-50%)
+	cursor: pointer
 	&:hover
 		opacity: 0.7
 	
@@ -56,10 +65,23 @@ ul
 	right: 5px
 
 .pointer 
-	color: red
-	list-style-type: disc
+	list-style-type: none
+	border: 1px solid red
+	background-color: red
 
 .circle
-	color: black
-	list-style-type: circle
+	list-style-type: none
+	border: 1px solid black
+
+#info 
+	display: none
+	position: relative
+	margin: 0 auto
+	width: 400px
+	max-width: 100%
+	top: 150px
+	text-align: center
+	font-family: verdana
+	font-size: smaller
+
 	
